# checkers_group1

./: CMakeLists.txt
core/: engine.cpp  engine.h  timer.h
entities/: board.cpp  board.h  pawn.cpp  pawn.h  player.cpp  player.h
helpers/: load_res.cpp  load_res.h
